--- a/Views/ResidenceContent.axaml
+++ b/Views/ResidenceContent.axaml
@@ -2,7 +2,7 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
+			 mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="820"
              xmlns:vm="using:WarrantGenerator.ViewModels"
              x:Class="WarrantGenerator.Views.ResidenceContentTab"
 			 x:DataType="vm:ResidenceContentViewModel">
@@ -29,7 +29,7 @@
 						<Border BorderBrush="{Binding OfficerNameBorder}"
 								BorderThickness="2">
 							<TextBox Text="{Binding OfficerNameText}"
-									 Width="200"/>
+									 Width="200" />
 						</Border>
 					</StackPanel>
 					<!-- /Officer Name -->
@@ -43,7 +43,8 @@
 								BorderThickness="2">
 							<StackPanel Orientation="Horizontal" Spacing="10">
 								<ComboBox ItemsSource="{Binding OfficerGender}"
-										  SelectedItem="{Binding OfficerGenderSelection}">
+										  SelectedItem="{Binding OfficerGenderSelection}"
+										  Width="100">
 								</ComboBox>
 							</StackPanel>
 						</Border>
@@ -289,7 +290,7 @@
 								 Text="{Binding ProbableCauseText}"
 								 AcceptsReturn="True"
 								 TextWrapping="Wrap"
-								 MinHeight="200"/>
+								 MinHeight="200" />
 					</Border>
 				</StackPanel>
 				<!-- /Probable Cause -->
@@ -306,7 +307,7 @@
 								 Text="{Binding SeizablePropertyText}"
 								 AcceptsReturn="True"
 								 TextWrapping="Wrap"
-								 MinHeight="200"/>
+								 MinHeight="200" />
 					</Border>
 				</StackPanel>
 				<!-- /Seizable Property -->
@@ -319,7 +320,7 @@
 						  ColumnDefinitions="Auto, Auto, Auto, Auto">
 						<TextBlock Grid.Column="0"
 								   Text="Documents to Generate:"
-								   VerticalAlignment="Center"/>
+								   VerticalAlignment="Center" />
 						<CheckBox Grid.Column="1"
 								  Content="Search Warrant Application"
 								  Margin="15, 0, 0, 0"
