--- a/Views/SocialMediaContent.axaml
+++ b/Views/SocialMediaContent.axaml
@@ -2,7 +2,7 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
+			 mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="820"
              xmlns:vm="using:WarrantGenerator.ViewModels"
              x:Class="WarrantGenerator.Views.SocialMediaContentTab"
 			 x:DataType="vm:SocialMediaContentViewModel">
@@ -29,7 +29,7 @@
 						<Border BorderBrush="{Binding OfficerNameBorder}"
 								BorderThickness="2">
 							<TextBox Text="{Binding OfficerNameText}"
-									 Width="200"/>
+									 Width="200" />
 						</Border>
 					</StackPanel>
 					<!-- /Officer Name -->
@@ -43,7 +43,8 @@
 								BorderThickness="2">
 							<StackPanel Orientation="Horizontal" Spacing="10">
 								<ComboBox ItemsSource="{Binding OfficerGender}"
-										  SelectedItem="{Binding OfficerGenderSelection}">
+										  SelectedItem="{Binding OfficerGenderSelection}"
+										  Width="100">
 								</ComboBox>
 							</StackPanel>
 						</Border>
@@ -135,7 +136,8 @@
 						<Border BorderBrush="{Binding PlatformBorder}"
 								BorderThickness="2">
 							<ComboBox ItemsSource="{Binding SocialMediaPlatforms}"
-									  SelectedItem="{Binding PlatformSelection}">
+									  SelectedItem="{Binding PlatformSelection}"
+									  Width="150">
 							</ComboBox>
 						</Border>
 					</StackPanel>
@@ -148,7 +150,8 @@
 								   Margin="5, 0, 0, 0" />
 						<Border BorderBrush="{Binding StartDateBorder}"
 								BorderThickness="2">
-							<DatePicker SelectedDate="{Binding StartDateSelection}" />
+							<CalendarDatePicker SelectedDate="{Binding StartDateSelection}"
+												Width="150" />
 						</Border>
 					</StackPanel>
 					<!-- /Start Date -->
@@ -374,7 +377,7 @@
 								 Text="{Binding ProbableCauseText}"
 								 AcceptsReturn="True"
 								 TextWrapping="Wrap"
-								 MinHeight="200"/>
+								 MinHeight="200" />
 					</Border>
 				</StackPanel>
 				<!-- /Probable Cause -->
@@ -391,7 +394,7 @@
 								 Text="{Binding LegalCriteriaText}"
 								 AcceptsReturn="True"
 								 TextWrapping="Wrap"
-								 MinHeight="200"/>
+								 MinHeight="200" />
 					</Border>
 				</StackPanel>
 				<!-- Legal Criteria for Offenses -->
@@ -404,7 +407,7 @@
 						  ColumnDefinitions="Auto, Auto, Auto, Auto">
 						<TextBlock Grid.Column="0"
 								   Text="Documents to Generate:"
-								   VerticalAlignment="Center"/>
+								   VerticalAlignment="Center" />
 						<CheckBox Grid.Column="1"
 								  Content="Search Warrant Application"
 								  Margin="15, 0, 0, 0"
